# lightning-pose

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  7m.py  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda11  Dockerfile.cuda12  LICENSE  MANIFEST.in  README.grid-hpo.md  README.md  README_KEMPNER.md  codecov.yaml  environment.yml  environment_snapshot.yaml  example_lightning_sweep.sh  grid-hpo.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_repro_env.sh  test_sleap.pkg.slp  train_dlc_lightning.py  train_hydra.py
.github/workflows/: debug-gpu.yml  lint.yml  publish.yml  run-tests.yml  tests.yml  tests_cpu.yml
active_loop/: README.md  call_active.sh  call_active_loop.py  train_demo.sh  train_demo_ensembles.sh
active_loop/configs/: config_ibl_active.yaml  config_ibl_experiment.yaml
active_pipeline/: README.md  active_utils.py  call_active.sh  call_active_loop.py  test_for_active_loop.py  test_for_sampling.py
active_pipeline/configs/: config_ibl_active.yaml  config_ibl_experiment.yaml
active_pipeline/experiments/: iteration_sweep.yaml
assets/images/: LightningPose_horizontal_dark.png.REMOVED.git-id  LightningPose_horizontal_light.png.REMOVED.git-id
cli/: friendly.py  main.py
cli/commands/: __init__.py  crop.py  predict.py  remap.py  train.py
configs/: config_kempner_repro.yaml
data/mirror-mouse-example/: CollectedData.csv  config.yaml
datasets/: datasets.py
docs/: DINOV2_UPSTREAM.md  README.md  add_a_loss.md  add_a_model.md  apps.md  conf.py  config.md  contributing.md  directory_structures.md  fiftyone.md  index.rst  requirements.txt  roadmap.md
docs/_static/: lightningpose.css
docs/api/: lightning_pose.callbacks.AnnealWeight.rst  lightning_pose.callbacks.PatchMasking.rst  lightning_pose.callbacks.UnfreezeBackbone.rst  lightning_pose.data.augmentations.imgaug_transform.rst  lightning_pose.data.dali.LitDaliWrapper.rst  lightning_pose.data.dali.PrepareDALI.rst  lightning_pose.data.dali.video_pipe.rst  lightning_pose.data.datamodules.BaseDataModule.rst  lightning_pose.data.datamodules.UnlabeledDataModule.rst  lightning_pose.data.datasets.BaseTrackingDataset.rst  lightning_pose.data.datasets.HeatmapDataset.rst  lightning_pose.data.datasets.MultiviewHeatmapDataset.rst  lightning_pose.data.datatypes.BaseLabeledBatchDict.rst  lightning_pose.data.datatypes.BaseLabeledExampleDict.rst  lightning_pose.data.datatypes.HeatmapLabeledBatchDict.rst  lightning_pose.data.datatypes.HeatmapLabeledExampleDict.rst  lightning_pose.data.datatypes.MultiviewHeatmapLabeledBatchDict.rst  lightning_pose.data.datatypes.MultiviewHeatmapLabeledExampleDict.rst  lightning_pose.data.datatypes.MultiviewLabeledBatchDict.rst  lightning_pose.data.datatypes.MultiviewLabeledExampleDict.rst  lightning_pose.data.datatypes.MultiviewUnlabeledBatchDict.rst  lightning_pose.data.datatypes.SemiSupervisedBatchDict.rst  lightning_pose.data.datatypes.SemiSupervisedDataLoaderDict.rst  lightning_pose.data.datatypes.SemiSupervisedHeatmapBatchDict.rst  lightning_pose.data.datatypes.UnlabeledBatchDict.rst  lightning_pose.data.utils.BaseLabeledBatchDict.rst  lightning_pose.data.utils.BaseLabeledExampleDict.rst  lightning_pose.data.utils.DataExtractor.rst  lightning_pose.data.utils.HeatmapLabeledBatchDict.rst  lightning_pose.data.utils.HeatmapLabeledExampleDict.rst  lightning_pose.data.utils.MultiviewHeatmapLabeledBatchDict.rst  lightning_pose.data.utils.MultiviewHeatmapLabeledExampleDict.rst  lightning_pose.data.utils.MultiviewLabeledBatchDict.rst  lightning_pose.data.utils.MultiviewLabeledExampleDict.rst  lightning_pose.data.utils.MultiviewUnlabeledBatchDict.rst  lightning_pose.data.utils.SemiSupervisedBatchDict.rst  lightning_pose.data.utils.SemiSupervisedDataLoaderDict.rst  lightning_pose.data.utils.SemiSupervisedHeatmapBatchDict.rst  lightning_pose.data.utils.UnlabeledBatchDict.rst  lightning_pose.data.utils.clean_any_nans.rst  (+120 more)
docs/modules/: lightning_pose.data.rst  lightning_pose.losses.rst  lightning_pose.models.backbones.rst  lightning_pose.models.heads.rst  lightning_pose.models.rst  lightning_pose.rst  lightning_pose.utils.rst
docs/source/: api.rst  cli.rst  core_concepts.rst  create_first_project.rst  developer_guide.add_a_loss.rst  developer_guide.add_a_model.rst  developer_guide.rst  directory_structure_changelog.rst  faqs.rst  (+12 more)
lightning_pose/: __init__.py  callbacks.py  metrics.py  model.py  model_config.py  project.py  rootconfig.py  train.py
pose_est_nets/: run_model.py
scripts/: FiftyOne_attempts.ipynb  config_default.yaml  create_center_frames.py  create_fiftyone_dataset.py  dali-context-tests.ipynb  dali-context-tests.ipynb.REMOVED.git-id  extract_frames.py  fiftyone_from_csvs.py  fix_pupil.ipynb  generic_migrate.py  grid-hpo.sh  grid-run-hydra-1.sh  grid-run-test-1.sh  grid-run-test-2.sh  hydra-conf-read-test.py  hydra-conf-read-test.sh  launch_diagnostics.py  litpose_training_demo.ipynb  loss_landscapes.ipynb.REMOVED.git-id  migrate.py  migrate_csv.py  migrate_internal_datasets.py  pca_plots.ipynb  pca_plots.ipynb.REMOVED.git-id  pca_traversals.ipynb.REMOVED.git-id  post_process_preds.ipynb  post_process_preds.ipynb.REMOVED.git-id  predict_compare.py  predict_multi_view.py  predict_new_vids.py  reencode_vids.py  render_labeled_vids.py  test_schema.py  train.py  train_dlc_lightning.py  train_hydra.py  train_hydra.sh  train_hydra_cont.py  train_hydra_cont_256.py  train_hydra_cont_512.py  (+3 more)
tests/: CollectedData_dummy.csv  CollectedData_dummyz.csv  conftest.py  fetch_test_data.py  test_DALI.py  test_base_resnet.py  test_callbacks.py  test_dali.py  test_datamodules.py  test_datasets.py  test_datasets_utils.py  test_dlc_tracker.py  test_eval.py  test_generate_heatmaps.py  test_heatmap.py  test_heatmap_tracker.py  test_losses.py  test_metrics.py  test_model.py  test_new_datasets.py  test_new_heatmap.py  test_new_regression_tracker.py  test_preprocessing.py  test_regression_tracker.py  test_regression_tracker_old.py  test_subpixmaxima.py  test_train.py  test_utils_pca.py  test_wasserstein.py
(+422 files in other folders)
