[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lightning-pose"
version = "2.1.1"
description = "Semi-supervised pose estimation using pytorch lightning"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dan Biderman", email = "danbider@gmail.com" },
    { name = "Matt Whiteaway" },
]
maintainers = [
    { name = "Karan Sikka", email = "karanssikka@gmail.com" },
]
keywords = ["machine learning", "deep learning", "computer_vision"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "aniposelib",
    "h5py",
    "hydra-core",
    "imaug",
    "kornia",
    "lightning (~=2.5.0)",
    "pytorch-lightning (~=2.5.0)",
    "matplotlib",
    "moviepy (>=2.0.0)",
    "numpy (>=2.0.0)",
    "opencv-python-headless",
    "pandas (>=2.2.2)",
    "pillow",
    "safetensors",
    "scikit-learn (>=1.5.0)",
    "tensorboard (<3.0.0)",
    "jaxtyping",
    "torch (<3.0.0)",
    "torchvision",
    "transformers>=4.57.5",
    "nvidia-dali-cuda110",
]

[project.urls]
repository = "https://github.com/paninski-lab/lightning-pose"
documentation = "https://lightning-pose.readthedocs.io/"


# project.dependencies are used for metadata when building the project, tool.poetry.dependencies is only used to enrich
# project.dependencies for locking
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.scripts]
litpose = "lightning_pose.cli.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-mock",
    "ruff",
    "Sphinx",
    "sphinx-argparse",
    "sphinx-automodapi",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-rtd-dark-mode",
    "sphinx_rtd_theme",
    "tbparse (<1.0.0)",
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports/variables)
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax: Tuple->tuple, Union->|, etc.)
    "B",   # flake8-bugbear (real bugs: mutable defaults, broad excepts, etc.)
    # "N",   # pep8-naming
]
ignore = [
    "B006",  # mutable default arguments are used intentionally in some places
    "E203",  # whitespace before ':' conflicts with black-style slice formatting
    "F722",  # jaxtyping dim strings (e.g. "batch channels") are not Python expressions
    "F821",  # undefined names in __all__ are flagged incorrectly for re-exports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"lightning_pose/data/datatypes.py" = ["UP037"]  # jaxtyping dim labels must stay as strings

[tool.ruff.lint.isort]
known-first-party = ["lightning_pose"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
include = ["lightning_pose", "tests"]
exclude = ["build", "configs", "data", "dist", "docs", "docker", "scripts"]
# torch stubs don't re-export public functions at the top level (torch.tensor, torch.allclose, etc.)
reportPrivateImportUsage = "none"

[tool.coverage.run]
# store paths relative to the repo root so that codecov can match coverage
# data against source files in the github repo, regardless of where the tests
# are run on the build machine. omit non-source directories to keep the report
# focused on lightning_pose/ only.
relative_files = true
omit = [
    "data/*",
    "docker/*",
    "docs/*",
    "htmlcov/*",
    "scripts/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = "tests"
generate_report_on_test = "True"
markers = ["multigpu"]
